--- a/shop/package.json
+++ b/shop/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
