--- a/shop/netlify.toml
+++ b/shop/netlify.toml
@@ -1,4 +1,13 @@
+[build]
+  command = "npm run build"
+  publish = "build"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Type = "text/javascript"
