--- a/shop/package.json
+++ b/shop/package.json
@@ -27,7 +27,8 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "react-select": "^5.10.0"
+    "react-select": "^5.10.0",
+    "sass": "^1.83.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
