--- a/shop/package.json
+++ b/shop/package.json
@@ -26,9 +26,8 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.3",
-    "react-select": "^5.10.0",
-    "sass": "^1.83.4"
+    "react-router-dom": "^7.0.2",
+    "react-select": "^5.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
